# PolygonTriangulation

./: .gitignore  Makefile  comandi  headers.hpp  program.cpp  tessellation.cpp
program/: Makefile  algebra.cpp  headers.hpp  program  program.cpp  tessellation.cpp  test.py  test2.py
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  graphics.py  points.xyz  polygons  program  program.cpp  test.py  test2.py
test2/: program  program.cpp
test3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  program  program.cpp
test4/: program  program.cpp  program2  program2.cpp  program3  program3.cpp
